# Eloquent

./: .gitignore  Makefile  Makefile.am  README-en.md  README.md  TODO.md  ast.c  ast.h  bytecode.c  bytecode.h  compiler.c  compiler.h  compiler_test.c  configure.ac  cv_main.c  env.c  env.h  hash_table.c  hash_table.h  ident.c  ident.h  init.c  init.h  init.scm  init_test.c  interp.c  interp.h  lexer.c  lexer.h  macros.c  macros.h  main.c  misc.h  object.c  object.h  parser.c  parser.h  poster.c  prims.c  prims.h  (+11 more)
examples/: define_fact.scm  even_odd.scm  is_prime.scm  leibniz.scm  list_length.scm  plus.scm  special-variable.scm  trace_fact.scm
test/: compiler_test.c  init_test.c  repl_test.c  vm_test.c
utils/: Makefile  hash_table.c  hash_table.h  seg_vector.c  seg_vector.h  stack.h  string.c  string.h  vector.c  vector.h
